--- a/src/styles/layout/scrollbar.scss
+++ b/src/styles/layout/scrollbar.scss
@@ -6,9 +6,6 @@
   bottom: 0;
   mix-blend-mode: difference;
   z-index: 4;
-  @include respond(xsmall) {
-    display: none;
-  }
   &__thumb {
     background-color: var(--white);
     position: absolute;
